Implement authentication flow in `auth-service` with login endpoint, user roles, and JWT-based token generation. Integrate Liquibase for schema updates and add password encoding to security configuration.